--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,7 @@
 
 /* whole site bg color */
 body {
-    @apply bg-background !important;
+    @apply bg-background text-black !important;
 }
 
 /* nav bar bg color */
