--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,6 +69,13 @@ body {
     @apply bg-white !important;
 }
 
+/* search results highlighted text color */
+.nextra-search .nextra-scrollbar .nx-text-primary-600 {
+    /* @apply bg-[#E4E4E4] rounded-[.25rem] !important; */
+    @apply text-[#8B8478] bg-[#F2F2F1] rounded-[.25rem] !important;
+    /* @apply text-[#B7ADA3] !important; */
+}
+
 /* border color (to accomodate darker bg) */
 *,
 ::before,
