base link badge and why alignment page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,3 +90,8 @@ body {
 footer {
   @apply bg-background !important;
 }
+
+/* default transition */
+.trans {
+  @apply transition-all duration-200 ease-in-out;
+}
