--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,16 +19,32 @@
     @apply flex flex-col;
   }
 
-  .center-v {
-    @apply justify-center;
-  }
-
-  .center-h {
+  .horizontal.center-v {
     @apply items-center;
   }
 
-  .circle {
-    @apply rounded-full shrink-0;
+  .horizontal.center-h {
+    @apply justify-center;
+  }
+
+  .horizontal.center {
+    @apply justify-center items-center;
+  }
+
+  .vertical.center-v {
+    @apply justify-center;
+  }
+
+  .vertical.center-h {
+    @apply items-center;
+  }
+
+  .vertical.center {
+    @apply justify-center items-center;
+  }
+
+  .space-between {
+    @apply justify-between;
   }
 }
 
