--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,6 +107,11 @@ footer {
   @apply bg-background !important;
 }
 
+/* highlight color */
+mark {
+  @apply bg-accent-300;
+}
+
 /* default transition */
 .trans {
   @apply transition-all duration-200 ease-in-out;
