cute stuff (don't even worry abt it)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,7 @@
 
 @layer components {
     .debug {
-        @apply border border-red-500;
+        @apply border !border-red-500;
     }
 
     .horizontal {
