make margin bottom important

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -133,11 +133,11 @@ html {
 }
 
 h1 {
-  @apply font-serif text-5xl mt-5 mb-7 text-dark !font-normal;
+  @apply font-serif text-5xl mt-5 !mb-7 text-dark !font-normal;
 }
 
 h2 {
-  @apply font-serif text-3xl mt-7 mb-7 pb-2 border-b border-gray-300 text-dark !font-normal;
+  @apply font-serif text-3xl mt-7 !mb-7 pb-2 border-b border-gray-300 text-dark !font-normal;
 }
 
 h3 {
